<resources>
    <string name="app_name">EjercicioDI</string>
    <string name="nombre">Nombre</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="estrellita">Estrellita</string>
    <string name="todo">TODO</string>
    <string name="asunto">Asunto</string>
    <string name="fecha">Fecha</string>
    <string name="contenido">Contenido</string>
    <string name="estrellita">Estrellita</string>
</resources>